2009-09-29  Dan Fandrich <dan@coneharvesters.com>

	* Added EXIF_DATA_TYPE_UNKNOWN as a backwards-compatible
	  replacement for most uses of EXIF_DATA_TYPE_COUNT since that's
	  a clearer name for how it's being used.

2009-09-26  Dan Fandrich <dan@coneharvesters.com>

	* libexif/exif-data.c: Added more error log messages and improved
	  a few data boundary checks.
	* Sped up exif_content_fix() considerably by splitting the one giant
	  loop into two much smaller & faster loops.

2009-09-24  Dan Fandrich <dan@coneharvesters.com>

	* Fixed some problems in MakerNote parsing that could cause a
	  read past the end of a buffer and therefore a segfault.
	* Allow MakerNote parsing to continue even if one tag parses
	  incorrectly.
	* Log an error whenever memory allocation fails in MakerNote parsing.

2009-09-23  Dan Fandrich <dan@coneharvesters.com>

	* Removed bogus "APEX" value from shutter speed display (thanks to
	  Jef Driesen for confirming this)
	* Fixed a couple of off-by-one unnecessary string truncations
	* Define M_PI for those systems that don't have it

2009-09-23  Jan Patera <patera@users.sourceforge.net>

	* po/cs.po: Updated Czech translation by Jan Patera

2009-09-18  Dan Fandrich <dan@coneharvesters.com>

	* Added support for writing Pentax and Casio v2 MakerNotes
	* Now displaying all components in Pentax and Casio v2 MakerNotes
	  when a tag has more than one

2009-09-18  Dan Fandrich <dan@coneharvesters.com>

	* po/de.po: Updated German translation by Marcus Meissner
	* po/sv.po: Updated Swedish translation by Daniel Nylander
	* po/vi.po: Updated Vietnamese translation by Clytie Siddall

2009-09-17  Dan Fandrich <dan@coneharvesters.com>

	* po/pl.po: Updated Polish translation by Jakub Bogusz

2009-09-16  Dan Fandrich <dan@coneharvesters.com>

	* po/en_CA.po: Updated Canadian English translation

2009-08-12  Lutz Mueller <lutz@users.sourceforge.com>

	Patch by Vladimir Petrov <vppetrov@mm-sol.com> plus some whitespace
        fixes by myself:
